namespace Instrument.Scheduler.Model;

public class AssaySample
{
    public Sample Sample { get; set; }

    public List<Assay> Assays { get; set; }
}
